make local app work in root

--- a/root/server/views/index.html
+++ b/root/server/views/index.html
@@ -24,8 +24,7 @@
   <body>
     <template id="single-spa-layout">
       <single-spa-router>
-        <application name="@isomorphic-mf/navbar" props="user"></application>
-        <route path="pokemons">
+        <route path="/">
           <application
             name="@isomorphic-mf/pokemons"
             props="user"
