make root config use local import map

--- a/root/server/views/index.html
+++ b/root/server/views/index.html
@@ -25,10 +25,7 @@
     <template id="single-spa-layout">
       <single-spa-router>
         <route path="/">
-          <application
-            name="@isomorphic-mf/pokemons"
-            props="user"
-          ></application>
+          <application name="@isomorphic-mf/app1" props="user"></application>
         </route>
       </single-spa-router>
     </template>
